<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_10"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_10"
    app:cardCornerRadius="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_230"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginEnd="@dimen/margin_10"
            android:text="@string/title"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:text="@string/author" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin15"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_weight="1"
                android:background="@drawable/bg_text"
                android:gravity="center"
                android:padding="@dimen/margin5"
                android:text="@string/nama"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin5"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/tanggal"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>